# screenpipe

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  COVERAGE.md  Cargo.toml  ONBOARDING.md  PR_BODY.md  README.md  SELF_REVIEW.md  TESTING.md
.claude/skills/release/: SKILL.md
.claude/skills/screenpipe-api/: SKILL.md
.claude/skills/screenpipe-cli/: SKILL.md
.claude/skills/screenpipe-tauri/: SKILL.md
.github/: pull_request_template.md
.github/scripts/: assert_windows_audio_rms.ps1
.github/workflows/: ci.yml  close-inactive.yml  e2e-macos.yml  e2e-test.yml  eval-diarization.yml  eval-meeting-detection.yml  release-app.yml  release-cli.yml  release-enterprise.yml  release-mcp.yml  sdk-release.yml  style.yml  test-cli-npm-e2e.yml
apps/screenpipe-app-tauri/: .gitignore  knip.json  next.config.mjs  package.json  vitest.config.ts
apps/screenpipe-app-tauri/app/: error.tsx  global-error.tsx  globals.css  providers.tsx
apps/screenpipe-app-tauri/components/: app-entitlement-gate.test.tsx  app-entitlement-gate.tsx  app-sidebar.tsx  browser-sidebar.tsx  changelog-dialog.tsx  chat-sidebar.tsx  conversation-bubble.tsx  deeplink-handler.tsx  feedback-dialog.tsx  live-signal.tsx  login-dialog.tsx  markdown.tsx  notification-handler.tsx  pipe-activity-indicator.tsx  pipe-install-dialog.tsx  pipe-store.tsx  post-install-connections-modal.tsx  share-logs-button.tsx  speaker-assign-popover.tsx  standalone-chat.tsx  theme-provider.tsx  update-banner.tsx
apps/screenpipe-app-tauri/e2e/: COVERAGE.md  README.md  coverage-map.json  run.sh  wdio.conf.ts
apps/screenpipe-app-tauri/lib/: api.ts  app-entitlement.test.ts  app-entitlement.ts  auth-guard.tsx  chat-queue-controls.ts  chat-storage.ts  chat-utils.test.ts  chat-utils.ts  notifications.ts  owned-browser-ownership.ts  pipe-ndjson-to-chat.ts  source-citations.ts  summary-templates.ts  sync-fetch.ts  utils.ts
apps/screenpipe-app-tauri/public/: CHANGELOG.md
apps/screenpipe-app-tauri/scripts/: exe-to-intunewin.ps1  find_tools.js  pre_build.js  setup_openblas.js
apps/screenpipe-app-tauri/src-tauri/: Cargo.toml  build.rs  sign-ssl.ps1  tauri.conf.json  tauri.enterprise.conf.json
coverage/: CORE.md  README.md  core-engine-map.json
coverage/scripts/: generate-core-engine-coverage-report.ts  generate-unified-coverage-report.ts
crates/screenpipe-a11y/: Cargo.toml
crates/screenpipe-a11y/examples/: linux_deep.rs
crates/screenpipe-a11y/src/: config.rs  lib.rs
crates/screenpipe-audio/: Cargo.toml  build.rs
crates/screenpipe-audio-eval/: Cargo.toml
crates/screenpipe-audio/examples/: race_repro.rs
crates/screenpipe-audio/tests/: core_tests.rs  hf_tls_test.rs
crates/screenpipe-capture/: Cargo.toml
crates/screenpipe-capture/src/: lib.rs  paired_capture.rs
crates/screenpipe-config/src/: defaults.rs  persistence.rs  recording.rs
crates/screenpipe-connect/: Cargo.toml
crates/screenpipe-connect/src/: mcp_servers.rs  oauth.rs  oauth_refresh_scheduler.rs  remote_sync.rs
crates/screenpipe-core/: Cargo.toml
crates/screenpipe-core/examples/: probe_screen_recording.rs
crates/screenpipe-core/src/: ffmpeg.rs  lib.rs  paths.rs  permissions.rs  strings.rs  video.rs  window_pattern.rs
crates/screenpipe-db/src/: acoustic_loopback.rs  db.rs  lib.rs  sqlite_error.rs  types.rs  write_queue.rs
crates/screenpipe-db/tests/: chunk_outcome_test.rs  db.rs  live_coverage_marker_test.rs  meeting_acoustic_loopback_test.rs  meeting_end_reason_test.rs  meeting_search_live_mirror_dedup_test.rs  meeting_transcript_dedup_test.rs  output_audio_liveness_test.rs  single_open_meeting_invariant_test.rs  timeline_live_meeting_test.rs  ui_events_batch_test.rs  untranscribed_chunks_test.rs
crates/screenpipe-engine/: Cargo.toml  build.rs
crates/screenpipe-engine/benches/: alloc_counter.rs  hot_frame_cache.rs
crates/screenpipe-engine/src/: analytics.rs  auth_key.rs  auto_destruct.rs  calendar_speaker_id.rs  cli_reminder.rs  connections_api.rs  drm_detector.rs  event_driven_capture.rs  lib.rs  (+19 more)
crates/screenpipe-redact/: Cargo.toml
crates/screenpipe-screen/: Cargo.toml
crates/screenpipe-sync/: Cargo.toml  README.md
crates/screenpipe-sync/src/: cursor.rs  encrypt.rs  error.rs  hash.rs  jsonl.rs  lib.rs  pipeline.rs
crates/screenpipe-sync/src/destination/: http_put.rs  local_fs.rs  mod.rs
crates/screenpipe-sync/src/source/: local_fs.rs  mod.rs
crates/screenpipe-team-memory/: Cargo.toml
docs/: PIPE_EXECUTION_SPEC.md  telemetry-support-context.md
ee/: README.md
ee/desktop/: index.ts
ee/desktop-rust/: enterprise_install_metadata.rs  enterprise_policy.rs  enterprise_sync.rs  enterprise_upload.rs
ee/sdk/: Cargo.toml  LICENSE.md  README.md  index.d.ts  package.json
ee/sdk/docs/: integration.md
ee/sdk/examples/electron-app/: main.js
ee/sdk/examples/tauri-app/: README.md  index.html  vite.config.js
ee/sdk/examples/tauri-app/src/: main.js
ee/sdk/examples/tauri-app/src-tauri/: Cargo.toml
ee/sdk/examples/tauri-app/src-tauri/capabilities/: default.json
ee/sdk/examples/tauri-app/src-tauri/src/: main.rs
ee/sdk/recorder-core/: Cargo.toml
ee/sdk/recorder-core/src/: lib.rs
ee/sdk/recorder-core/src/platform/: mod.rs  recorder.rs  stub.rs
ee/sdk/session/: index.d.ts  index.js  telemetry-core.js  telemetry.js
ee/sdk/src/: lib.rs
ee/sdk/tauri/: index.d.ts  index.js
ee/sdk/tauri/rust/: Cargo.toml  build.rs
ee/sdk/tauri/rust/permissions/: default.toml
ee/sdk/tauri/rust/permissions/autogenerated/: reference.md
ee/sdk/tauri/rust/permissions/autogenerated/commands/: screenpipe_dispose.toml  screenpipe_events.toml  screenpipe_identify.toml  screenpipe_permissions.toml  screenpipe_reveal.toml  screenpipe_snapshot.toml  screenpipe_start.toml  screenpipe_status.toml  screenpipe_stop.toml
ee/sdk/tauri/rust/permissions/schemas/: schema.json
ee/sdk/tauri/rust/src/: lib.rs  telemetry.rs
scripts/dev/: README.md  pr-demo  pr-demo.test.sh  pr-evidence  pr-evidence-gui  screenpipe-dev  sp-dev-cli
translated_readmes/: README-de.md  README-es.md  README-fr.md  README-ja.md  README-pt_BR.md  README-uk.md  README-zh_CN.md  README.md
(+333 files in other folders)
