[package]
name = "screenpipe-capture"
version = "0.1.0"
edition = "2021"
description = "Paired screenshot + accessibility-tree capture, persisted to the screenpipe DB. Shared by the engine binary and the SDK."
license = "MIT"

[dependencies]
screenpipe-a11y = { path = "../screenpipe-a11y" }
screenpipe-core = { path = "../screenpipe-core", default-features = false, features = ["security"] }
screenpipe-db = { path = "../screenpipe-db" }
screenpipe-screen = { path = "../screenpipe-screen" }

anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
image = { workspace = true }
once_cell = { workspace = true }
regex = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
