[package]
name = "screenpipe-sync"
version = { workspace = true }
authors = { workspace = true }
description = "Generic data-sync primitives: pluggable destinations + body encryption + ticketed upload pipeline."
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { workspace = true }
tracing = { workspace = true }

# Hashing — always on; tiny and used for object-name + manifest sha256.
sha2 = "0.10"
hex = "0.4"

# Feature-gated: HTTP transport. Required for `HttpPutDirect` + `TicketedPipeline`.
reqwest = { workspace = true, optional = true }

# Feature-gated: body encryption (ChaCha20-Poly1305 + per-recipient key wrap).
chacha20poly1305 = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }
rand = { version = "0.8", optional = true }
zeroize = { version = "1.8", features = ["derive"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
tempfile = "3"

[features]
default = ["http", "encrypt"]
http = ["dep:reqwest"]
encrypt = ["dep:chacha20poly1305", "dep:base64", "dep:rand", "dep:zeroize"]
