[package]
name = "screenpipe-sdk"
version = "0.4.3"
edition = "2021"
description = "Screenpipe SDK — napi-rs bindings around the screenpipe-recorder crate"
license = "LicenseRef-Screenpipe-Enterprise"
publish = false

# The SDK is intentionally not part of the parent screenpipe workspace
# (see the root Cargo.toml `workspace.exclude`). Declaring our own
# workspace here keeps cargo from walking up the directory tree, and
# pulls `recorder-core` in as a sibling member so both share a lockfile
# (they wrap the same monorepo crates — single lockfile = one set of
# resolved versions, no duplication).
[workspace]
members = ["recorder-core", "tauri/rust"]
# Examples (tauri-app/src-tauri etc.) are full apps with their own
# tauri-build / signing configs; they keep their own workspace roots.
exclude = ["examples"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# All orchestration lives here. The Tauri plugin
# (`ee/sdk/tauri/rust`) depends on the same crate, so the recorder
# logic isn't duplicated and no Node bridge is needed for native hosts.
screenpipe-recorder = { path = "recorder-core" }

napi = { version = "2", default-features = false, features = ["napi4", "async"] }
napi-derive = "2"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
